Updated blog rendering with custom components, added other styling

--- a/posts/blog.mdx
+++ b/posts/blog.mdx
@@ -8,10 +8,20 @@ date: Jan 6, 2024
 ---
  
 # Welcome to my MDX page!
+
+## Subheading
+
+### Sub Subheading
  
 This is some **bold** and _italics_ text.
  
-This is a list in markdown:
+This is an ordered list in markdown:
+
+1. One
+2. Two
+3. Three
+
+This is an unordered list:
 
 - One
 - Two
