--- a/posts/blog.mdx
+++ b/posts/blog.mdx
@@ -9,6 +9,8 @@ date: Jan 6, 2024
  
 # Welcome to my MDX page!
 
+![Sample image](https://picsum.photos/400/200)
+
 ## Subheading
 
 ### Sub Subheading
