removed extra blog posts

--- a/posts/blog.mdx
+++ b/posts/blog.mdx
@@ -9,7 +9,7 @@ date: Jan 6, 2024
  
 # Welcome to my MDX page!
 
-![Sample image](https://picsum.photos/400/200)
+![Sample image](/static/images/image.png)
 
 ## Subheading
 
